# ft_malloc

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  Readme.md  calloc.c  free.c  ft_print.c  malloc.c  realloc.c  reallocf.c  show_alloc_mem.c  tools.c  utils.c  valloc.c
includes/: alloc.h  tools.h
test/: main.c  main2.c  main3.c  main4.c  test  test0.c  test1.c  test2  test2.c  test3  test3.c  test3b  test3b.c  test4  test4.c  test5  test5.c
